@@ -1,3 +1,11 @@
+2006-09-28  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>
+
+	* w3m-mail.el (w3m-mail-user-agent-compose-function-alist): Add
+	wl-user-agent.
+	(w3m-mail-compose-with-semi): New function.
+
+	* w3m.el (w3m-mail-user-agents): Add wl-user-agent.
+
 2006-09-28  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m-util.el (w3m-coding-system-to-mime-charset): New function.
